--- a/docs/guide/src/docs/asciidoc/usage_from_kotlin.adoc
+++ b/docs/guide/src/docs/asciidoc/usage_from_kotlin.adoc
@@ -1,7 +1,7 @@
 [[_kotlin_usage]]
-= Using `JRis` from Kotlin
+= Using `KRis` from Kotlin
 
-Using JRis from kotlin allows us to profit from syntactic sugar provided by kotlin like data classes with default arguments for creating RisRecords or extension functions with receivers for calling the actual export/import methods.
+Using KRis from kotlin allows us to profit from syntactic sugar provided by kotlin like data classes with default arguments for creating RisRecords or extension functions with receivers for calling the actual export/import methods.
 
 [[_kotlin_usage_export]]
 == Export: RIS records -> text file
@@ -50,7 +50,7 @@ If we want to write the list of lines into a file, we can do that manually, e.g.
 include::../../../../../subprojects/jris-guide/src/test/kotlin/com/gmail/gcolaianni5/jris/guide/GuideExamples.kt[tags=writingToFileManually]
 ----
 
-To make this process easier, JRis offers some extension functions providing some syntactic sugar.
+To make this process easier, KRis offers some extension functions providing some syntactic sugar.
 We can use the `accept` extension function with a writer, a file, an output stream or a path as receiver respectively:
 
 .Writing the list of `RisRecords` in a blocking manner into a buffered writer [kotlin]
