--- a/docs/guide/src/docs/asciidoc/index.adoc
+++ b/docs/guide/src/docs/asciidoc/index.adoc
@@ -12,6 +12,6 @@ include::{includedir}/usage.adoc[]
 
 = Links
 
-link:api/index.html[Javadoc, window="_blank"]
+link:kapi/kris/index.html[Kotlindoc, window="_blank"]
 
 link:api-html/index.html[Source, window="_blank"]
