Ensure imagesdir and includedir can be resolved in IntelliJ

--- a/docs/guide/src/docs/asciidoc/index.adoc
+++ b/docs/guide/src/docs/asciidoc/index.adoc
@@ -1,3 +1,10 @@
+ifndef::imagesdir[]
+:imagesdir: ../resources/images
+endif::[]
+ifndef::includedir[]
+:includedir: .
+endif::[]
+
 = {project-title}
 :author: {project-author}
 :revnumber: {project-version}
