--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -48,9 +48,11 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 
 .Added
 
-////
-.Changed
 
+.Changed
+- Bumped gradle-wrapper
+
+////
 .Deprecated
 
 .Removed
