--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -44,7 +44,7 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 [[unreleased]]
 == [unreleased]
 
-{url-cl}0.4.6++...++main[Full Changelog]
+{url-cl}0.5.0++...++main[Full Changelog]
 
 .Added
 
@@ -62,6 +62,40 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 
 ////
 
+[[v0.5.0]]
+== [0.5.0] -- 2023-10-07
+
+{url-cl}0.4.9++...++0.5.0[Full Changelog]
+
+.Changed
+- Bumped dependency
+  gradle-wrapper,
+  kotest, mockk,
+  versions gradle plugin,
+  checkout github action
+- Fail on gradle deprecation warnings
+
+.Removed
+- Java 11 compatibility (now requiring java platform 17 as minimum)
+
+
+[[v0.4.9]]
+== [0.4.9] -- 2023-09-05
+
+{url-cl}0.4.6++...++0.4.9[Full Changelog]
+
+.Changed
+- Bumped dependencies
+  kotlin, coroutines, kotlinx-coroutines-rx2
+  junit5, kotest, mockk, kluent,
+  dokka, detekt, reckon,
+  versions gradle plugin, git-publish plugin, binary compatibility-validator, sonarqube gradle plugin,
+
+.Added
+- detekt hints
+
+.Fixed
+- Path to guide build directory
 
 [[v0.4.6]]
 == [0.4.6] -- 2023-04-03
