--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -44,7 +44,7 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 [[unreleased]]
 == [unreleased]
 
-{url-cl}0.5.5++...++main[Full Changelog]
+{url-cl}0.5.6++...++main[Full Changelog]
 
 .Added
 
@@ -62,10 +62,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 ////
 
 
-[[v0.5.5]]
-== [0.5.5] -- 2024-12-11
+[[v0.5.6]]
+== [0.5.6] -- 2024-12-11
 
-{url-cl}0.5.3++...++0.5.5[Full Changelog]
+{url-cl}0.5.3++...++0.5.6[Full Changelog]
 
 .Changed
 - Bumped kotlin, coroutines,
@@ -73,6 +73,7 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
   gradle, detekt, git-publish, reckon, asciidoctor, foojay-resolver-convention,
   binary-compatibitility-validator, sonarqube,
   checkout action, gradle action
+- Adusted to new way of configuring the git publish plugin
 
 
 [[v0.5.3]]
