--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -48,18 +48,17 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 
 .Added
 
-////
 .Changed
 
 .Deprecated
 
 .Removed
+- dependency kluent (migrated to kotest-assertions)
 
 .Fixed
 
 .Security
 
-////
 
 [[v0.5.13]]
 == [0.5.13] -- 2025-05-10
