--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -44,20 +44,34 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].
 [[unreleased]]
 == [unreleased]
 
-{url-cl}0.5.13++...++main[Full Changelog]
+{url-cl}0.5.16++...++main[Full Changelog]
 
 .Added
 
+////
 .Changed
 
 .Deprecated
 
 .Removed
-- dependency kluent (migrated to kotest-assertions)
 
 .Fixed
 
 .Security
+
+////
+
+[[v0.5.16]]
+== [0.5.16] -- 2025-09-27
+
+.Changed
+- Bumped kotlin,
+  gradle, binary-compatibility-validator, reckon,
+  kotsst, junit5, mockk, assertj,
+  versions, git-publish, asciidoctor, sonarqube, foojay-resolver-convention,
+  gradle/actions digewst, actions/cache, actions/checkout, actions/setup-java, github/codeql-action
+.Removed
+- dependency kluent (migrated to kotest-assertions)
 
 
 [[v0.5.13]]
