--- a/README.adoc
+++ b/README.adoc
@@ -5,14 +5,14 @@ image:https://github.com/ursjoss/KRis/actions/workflows/codeql.yml/badge.svg?bra
 
 == KRis
 
-KRis is a Kotlin implementation of RIS Format -- forked from fastlucas Java implementation https://github.com/fastluca/JRis[JRis].
-KRis has the goal to give an easy way to parse RIS format stream and to build them.
+KRis is a Kotlin implementation of RIS Format -- forked from fastluca's Java implementation https://github.com/fastluca/JRis[JRis].
+KRis has the goal to provide an easy way to parse RIS format streams and to build them.
 
 From https://en.wikipedia.org/wiki/RIS_(file_format)[Wikipedia]:
 
 ====
 RIS is a standardized tag format developed by Research Information Systems,
-Incorporated (the format name refers to the company) to  enable citation programs to exchange data.
+Incorporated (the format name refers to the company) to enable citation programs to exchange data.
 It is supported by a number of reference managers.
 Many digital libraries, like IEEE Xplore, Scopus, the ACM Portal, Scopemed, ScienceDirect,
 SpringerLink and Rayyan QCRI can export citations in this format.
@@ -29,7 +29,7 @@ Requires JRE 17 or later.
 
 As of version 0.4.0, KRis is available in https://search.maven.org/search?q=g:ch.difty.kris[maven-central].
 
-.Gradle depending on KRisc-core and -- optionally -- KRis-io
+.Gradle dependency on KRis-core and -- optionally -- KRis-io
 [code,kotlin]
 ----
 dependencies {
